# sdv_improved_gaussiancopulasynthesizer

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py
src/: app.py
src/new_sdv/: __init__.py  constraints.py  distributions.py  synthesizer.py
src/new_sdv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_synthesizer.py
