[tool.poetry]
name = "sdv_1version"
version = "0.1.0"
description = "Synthetic data generation with SDV"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26"
pandas = ">=2.1"
scipy = ">=1.12"
plotly = ">=5.23"
streamlit = ">=1.32"
torch = ">=2.3,<3.0"   # â† add this here
