[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sdv_improved_gaussiancopulasynthesizer"
version = "0.1.0"
description = "Synthetic tabular data via an improved Gaussian Copula synthesizer"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# src-layout: tell Poetry where the *importable* package lives
packages = [{ include = "new_sdv", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26"
pandas = ">=2.1"
scipy = ">=1.12"
plotly = ">=5.23"
streamlit = ">=1.32"

# If your Gaussian Copula code does NOT need PyTorch, do NOT add torch here.
# If you later add CTGAN/TVAE, either add torch here or lazy-import it in code.
